# Tarea1Hardware

Tarea_1_Hardware/: CMakeLists.txt
Tarea_1_Hardware/src/: main.c
